resources/media-store/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: bazarr
spec:
  rules:
    - host: bazarr.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: bazarr
              servicePort: 6767
